# instapapercli

./: .gitignore  README.md  pyproject.toml
docs/: file-upload-plan.md
docs/plans/: 2026-03-04-instapaper-cli-design.md
src/instapaper/: __init__.py  api.py  cli.py  config.py  converters.py  epub.py
tests/: test_api.py  test_cli.py  test_config.py  test_converters.py  test_epub.py
