[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instapaper-cli"
version = "0.1.0"
description = "CLI for Instapaper - add articles, list bookmarks, export to EPUB"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "requests-oauthlib>=1.3",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "markdown>=3.4",
    "pymupdf>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
]

[project.scripts]
instapaper = "instapaper.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
